--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,8 +228,8 @@ header .navbar ul li a:hover{
 
 .education .box-container{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+/*     align-items: center; */
+    justify-content: space-evenly;
     flex-wrap: wrap;
     padding:1rem 0;
     padding-left: 3rem;
